1.登录暂时不需要密码 2.主框架完成

--- a/RD3/Views/LoginView.xaml
+++ b/RD3/Views/LoginView.xaml
@@ -66,10 +66,13 @@
                     </PasswordBox>
 
                     <Button
+                        hc:BorderElement.CornerRadius="15"
                         Command="{Binding ExecuteCommand}"
                         CommandParameter="Login"
                         Content="登录系统"
-                        DockPanel.Dock="Top" />
+                        DockPanel.Dock="Top"
+                        IsDefault="True"
+                        Style="{StaticResource ButtonPrimary}" />
 
                     <DockPanel
                         Margin="0,5"
