--- a/RD3/Views/MainView.xaml
+++ b/RD3/Views/MainView.xaml
@@ -2,7 +2,7 @@
     x:Class="RD3.Views.MainView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Lay="clr-namespace:RD3"
+    xmlns:Lay="clr-namespace:LayUI.Wpf.Controls;assembly=LayUI.Wpf"
     xmlns:Selector="clr-namespace:RD3"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:ext="clr-namespace:RD3.Extensions"
@@ -156,6 +156,8 @@
                                 <RadioButton
                                     Height="40"
                                     Padding="20,0"
+                                    Command="{Binding GoPageCommand}"
+                                    CommandParameter="{Binding}"
                                     Content="{Binding ItemTitle}"
                                     FocusVisualStyle="{x:Null}"
                                     Foreground="White"
@@ -179,7 +181,7 @@
                                                     x:Name="line"
                                                     Width="5"
                                                     HorizontalAlignment="Left"
-                                                      Background="Transparent"
+                                                    Background="Transparent"
                                                     Opacity="0" />
                                                 <ContentPresenter
                                                     x:Name="dataContent"
