--- a/RD3/Views/MainView.xaml
+++ b/RD3/Views/MainView.xaml
@@ -28,61 +28,13 @@
     WindowStartupLocation="CenterScreen"
     WindowStyle="None"
     mc:Ignorable="d">
-    <Window.Resources>
-        <Style x:Key="ExpandCollapseToggleStyle" TargetType="ToggleButton">
-            <Setter Property="Focusable" Value="False" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="ToggleButton">
-                        <Grid
-                            Width="25"
-                            Height="23"
-                            SnapsToDevicePixels="True">
-
-                            <Rectangle
-                                Width="13"
-                                Height="13"
-                                SnapsToDevicePixels="true"
-                                Stroke="#919191">
-                                <Rectangle.Fill>
-                                    <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,2">
-                                        <GradientStop Offset="0" Color="White" />
-                                        <GradientStop Offset="0.5" Color="Silver" />
-                                        <GradientStop Offset="1" Color="LightGray" />
-                                    </LinearGradientBrush>
-                                </Rectangle.Fill>
-                            </Rectangle>
-
-                            <Rectangle
-                                x:Name="ExpandPath"
-                                Width="1"
-                                Height="5"
-                                SnapsToDevicePixels="true"
-                                Stroke="Black" />
-
-                            <Rectangle
-                                Width="5"
-                                Height="1"
-                                SnapsToDevicePixels="true"
-                                Stroke="Black" />
-                        </Grid>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsChecked" Value="True">
-                                <Setter TargetName="ExpandPath" Property="Visibility" Value="Collapsed" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </Window.Resources>
     <materialDesign:DialogHost
         x:Name="DialogHost"
         DialogTheme="Inherit"
         Identifier="Root">
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="250" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid Background="{StaticResource PrimaryMenuBrush}">
@@ -106,15 +58,15 @@
                         Source="/Images/logo.png" />
                     <StackPanel Margin="10" Orientation="Vertical">
                         <TextBlock
-                            Width="60"
+                            Width="80"
                             Margin="5"
-                            FontSize="16"
+                            FontSize="20"
                             Foreground="WhiteSmoke"
                             Text="XinZao"
                             TextAlignment="Left"
                             TextWrapping="Wrap" />
                         <TextBlock
-                            FontSize="10"
+                            FontSize="12"
                             Foreground="WhiteSmoke"
                             Text="Biotech Co.LTD" />
                     </StackPanel>
@@ -125,9 +77,10 @@
                     Height="1"
                     Margin="0,10,0,5"
                     Fill="{StaticResource PrimarySeparatorBrush}" />
-                <ScrollViewer
+                <!--<ScrollViewer
                     Grid.Row="2"
                     Grid.ColumnSpan="2"
+                    Background="{StaticResource PrimaryMenuBrush}"
                     HorizontalScrollBarVisibility="Disabled"
                     VerticalScrollBarVisibility="Auto">
                     <ItemsControl
@@ -143,7 +96,10 @@
                                     Padding="10,0"
                                     Header="{Binding ItemTitle}"
                                     IsExpanded="{Binding IsSelected}">
-                                    <ItemsControl ItemTemplateSelector="{DynamicResource MenuItemSelector}" ItemsSource="{Binding Data}">
+                                    <ItemsControl
+                                        Background="{StaticResource PrimaryMenuBrush}"
+                                        ItemTemplateSelector="{DynamicResource MenuItemSelector}"
+                                        ItemsSource="{Binding Data}">
                                         <ItemsControl.ItemsPanel>
                                             <ItemsPanelTemplate>
                                                 <StackPanel />
@@ -241,13 +197,214 @@
                             </DataTemplate>
                         </ItemsControl.Resources>
                     </ItemsControl>
-                </ScrollViewer>
+                </ScrollViewer>-->
+                <hc:SideMenu
+                    Grid.Row="2"
+                    Grid.ColumnSpan="2"
+                    Margin="20,10,0,5"
+                    hc:AutoSelect="False"
+                    hc:ExpandMode="Freedom"
+                    Background="Transparent"
+                    BorderThickness="0">
+                    <hc:Interaction.Triggers>
+                        <hc:EventTrigger EventName="SelectionChanged">
+                            <hc:EventToCommand Command="{Binding SwitchItemCmd}" PassEventArgsToCommand="True" />
+                        </hc:EventTrigger>
+                    </hc:Interaction.Triggers>
+                    <hc:SideMenuItem
+                        Background="{StaticResource PrimaryMenuBrush}"
+                        FontSize="22"
+                        Foreground="WhiteSmoke"
+                        Header="Home">
+                        <hc:SideMenuItem.Icon>
+                            <materialDesign:PackIcon
+                                Width="36"
+                                Height="36"
+                                Kind="Home" />
+                        </hc:SideMenuItem.Icon>
+                    </hc:SideMenuItem>
+                    <hc:SideMenuItem
+                        Background="{StaticResource PrimaryMenuBrush}"
+                        FontSize="22"
+                        Foreground="WhiteSmoke"
+                        Header="Projects">
+                        <hc:SideMenuItem.Icon>
+                            <materialDesign:PackIcon
+                                Width="36"
+                                Height="36"
+                                Kind="FolderOpen" />
+                        </hc:SideMenuItem.Icon>
+                    </hc:SideMenuItem>
+                    <hc:SideMenuItem
+                        Background="{StaticResource PrimaryMenuBrush}"
+                        FontSize="22"
+                        Foreground="WhiteSmoke"
+                        Header="Data">
+                        <hc:SideMenuItem.Icon>
+                            <materialDesign:PackIcon
+                                Width="36"
+                                Height="36"
+                                Kind="Database" />
+                        </hc:SideMenuItem.Icon>
+                        <hc:SideMenuItem
+                            Background="{StaticResource PrimaryMenuBrush}"
+                            Command="{Binding SelectCmd}"
+                            CommandParameter="{Binding Header, RelativeSource={RelativeSource Self}}"
+                            Foreground="WhiteSmoke"
+                            Header="Batches">
+                            <hc:SideMenuItem.Icon>
+                                <materialDesign:PackIcon
+                                    Width="36"
+                                    Height="36"
+                                    Kind="Database" />
+                            </hc:SideMenuItem.Icon>
+                        </hc:SideMenuItem>
+                        <hc:SideMenuItem
+                            Background="{StaticResource PrimaryMenuBrush}"
+                            Command="{Binding SelectCmd}"
+                            CommandParameter="{Binding Header, RelativeSource={RelativeSource Self}}"
+                            Foreground="WhiteSmoke"
+                            Header="Events">
+                            <hc:SideMenuItem.Icon>
+                                <materialDesign:PackIcon
+                                    Width="36"
+                                    Height="36"
+                                    Kind="Database" />
+                            </hc:SideMenuItem.Icon>
+                        </hc:SideMenuItem>
+                        <hc:SideMenuItem
+                            Background="{StaticResource PrimaryMenuBrush}"
+                            Command="{Binding SelectCmd}"
+                            CommandParameter="{Binding Header, RelativeSource={RelativeSource Self}}"
+                            Foreground="WhiteSmoke"
+                            Header="Samples">
+                            <hc:SideMenuItem.Icon>
+                                <materialDesign:PackIcon
+                                    Width="36"
+                                    Height="36"
+                                    Kind="Database" />
+                            </hc:SideMenuItem.Icon>
+                        </hc:SideMenuItem>
+                        <hc:SideMenuItem
+                            Background="{StaticResource PrimaryMenuBrush}"
+                            Command="{Binding SelectCmd}"
+                            CommandParameter="{Binding Header, RelativeSource={RelativeSource Self}}"
+                            Foreground="WhiteSmoke"
+                            Header="Database">
+                            <hc:SideMenuItem.Icon>
+                                <materialDesign:PackIcon
+                                    Width="36"
+                                    Height="36"
+                                    Kind="Database" />
+                            </hc:SideMenuItem.Icon>
+                        </hc:SideMenuItem>
+                    </hc:SideMenuItem>
+                    <hc:SideMenuItem
+                        Background="{StaticResource PrimaryMenuBrush}"
+                        FontSize="22"
+                        Foreground="WhiteSmoke"
+                        Header="Control">
+                        <hc:SideMenuItem.Icon>
+                            <materialDesign:PackIcon
+                                Width="36"
+                                Height="36"
+                                Kind="AlphaCBoxOutline" />
+                        </hc:SideMenuItem.Icon>
+                    </hc:SideMenuItem>
+                    <hc:SideMenuItem
+                        Background="{StaticResource PrimaryMenuBrush}"
+                        FontSize="22"
+                        Foreground="WhiteSmoke"
+                        Header="Advance">
+                        <hc:SideMenuItem.Icon>
+                            <materialDesign:PackIcon
+                                Width="36"
+                                Height="36"
+                                Kind="ViewGridOutline" />
+                        </hc:SideMenuItem.Icon>
+                    </hc:SideMenuItem>
+                    <hc:SideMenuItem
+                        Background="{StaticResource PrimaryMenuBrush}"
+                        FontSize="22"
+                        Foreground="WhiteSmoke"
+                        Header="Settings">
+                        <hc:SideMenuItem.Icon>
+                            <materialDesign:PackIcon
+                                Width="36"
+                                Height="36"
+                                Kind="CogOutline" />
+                        </hc:SideMenuItem.Icon>
+                    </hc:SideMenuItem>
+                </hc:SideMenu>
             </Grid>
             <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="50" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
+                <StackPanel
+                    Name="WindowHeader"
+                    FlowDirection="RightToLeft"
+                    Orientation="Horizontal">
+                    <Button
+                        Name="btnClose"
+                        Width="50"
+                        Height="50"
+                        HorizontalAlignment="Stretch"
+                        Background="Transparent"
+                        BorderThickness="0">
+                        <materialDesign:PackIcon
+                            Width="24"
+                            Height="24"
+                            Foreground="Gray"
+                            Kind="Close" />
+                    </Button>
+                    <Button
+                        Name="btnMax"
+                        Width="50"
+                        Height="50"
+                        HorizontalAlignment="Stretch"
+                        Background="Transparent"
+                        BorderThickness="0">
+                        <materialDesign:PackIcon
+                            Width="24"
+                            Height="24"
+                            Foreground="Gray"
+                            Kind="WindowMaximize" />
+                    </Button>
+                    <Button
+                        Name="btnMin"
+                        Width="50"
+                        Height="50"
+                        HorizontalAlignment="Stretch"
+                        Background="Transparent"
+                        BorderThickness="0">
+                        <materialDesign:PackIcon
+                            Width="24"
+                            Height="24"
+                            Foreground="Gray"
+                            Kind="Minus" />
+                    </Button>
+                    <TextBlock
+                        Margin="100,0,0,0"
+                        VerticalAlignment="Center"
+                        FontSize="16"
+                        Text="{Binding UserName}" />
+                    <Button
+                        Width="50"
+                        Height="50"
+                        HorizontalAlignment="Stretch"
+                        Background="Transparent"
+                        BorderThickness="0"
+                        Command="{Binding UserCenterCommand}"
+                        ToolTip="User Setting">
+                        <materialDesign:PackIcon
+                            Width="36"
+                            Height="36"
+                            Foreground="Gray"
+                            Kind="AccountCircle" />
+                    </Button>
+                </StackPanel>
                 <ContentControl Grid.Row="1" prism:RegionManager.RegionName="{x:Static ext:PrismManager.MainViewRegionName}" />
             </Grid>
             <materialDesign:Snackbar
