--- a/RD3/App.xaml
+++ b/RD3/App.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:local="clr-namespace:RD3"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
@@ -101,6 +102,34 @@
             </Style>
             <Style x:Key="BodyFontSizeStyle" TargetType="{x:Type TextBlock}">
                 <Setter Property="FontSize" Value="14" />
+            </Style>
+            <Style
+                x:Key="DataGridLeftColumnHeaderStyle"
+                BasedOn="{StaticResource DataGridColumnHeaderStyle}"
+                TargetType="DataGridColumnHeader">
+                <Setter Property="HorizontalContentAlignment" Value="Left" />
+            </Style>
+            <Style
+                x:Key="DataGridCenterColumnHeaderStyle"
+                BasedOn="{StaticResource DataGridColumnHeaderStyle}"
+                TargetType="DataGridColumnHeader">
+                <Setter Property="HorizontalContentAlignment" Value="Center" />
+            </Style>
+            <Style
+                x:Key="DataGridTextLeftCellStyle"
+                BasedOn="{StaticResource DataGridCellStyle}"
+                TargetType="DataGridCell">
+                <Setter Property="HorizontalContentAlignment" Value="Left" />
+                <Setter Property="Background" Value="Transparent" />
+                <Setter Property="VerticalContentAlignment" Value="Center" />
+            </Style>
+            <Style
+                x:Key="DataGridTextCenterCellStyle"
+                BasedOn="{StaticResource DataGridCellStyle}"
+                TargetType="DataGridCell">
+                <Setter Property="HorizontalContentAlignment" Value="Center" />
+                <Setter Property="Background" Value="Transparent" />
+                <Setter Property="VerticalContentAlignment" Value="Center" />
             </Style>
         </ResourceDictionary>
     </Application.Resources>
