--- a/RD3/Views/AddSampleLogView.xaml
+++ b/RD3/Views/AddSampleLogView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ex="clr-namespace:LayUI.Wpf.Extensions;assembly=LayUI.Wpf.Extensions"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:local="clr-namespace:RD3.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -28,20 +29,20 @@
             Grid.ColumnSpan="2"
             Width="200"
             VerticalAlignment="Center"
-            hc:InfoElement.Title="Sample ID"
+            hc:InfoElement.Title="{ex:Language Key='Sample ID'}"
             Style="{StaticResource TextBoxExtend}" />
         <TextBox
             Grid.Row="1"
             Grid.ColumnSpan="2"
             Width="200"
             VerticalAlignment="Center"
-            hc:InfoElement.Title="Batch"
+            hc:InfoElement.Title="{ex:Language Key='Batch'}"
             Style="{StaticResource TextBoxExtend}" />
         <ComboBox
             Grid.Row="2"
             Grid.ColumnSpan="2"
             Width="200"
-            hc:InfoElement.Title="Reactor"
+            hc:InfoElement.Title="{ex:Language Key='Reactor'}"
             ItemsSource="{Binding DataList}"
             SelectedIndex="0"
             Style="{StaticResource ComboBoxExtend}" />
@@ -49,14 +50,14 @@
             Grid.Row="3"
             Grid.ColumnSpan="2"
             Width="200"
-            hc:InfoElement.Title="Type"
+            hc:InfoElement.Title="{ex:Language Key='Type'}"
             ItemsSource="{Binding DataList}"
             SelectedIndex="0"
             Style="{StaticResource ComboBoxExtend}" />
         <ComboBox
             Grid.Row="4"
             Width="130"
-            hc:InfoElement.Title="Main parameter"
+            hc:InfoElement.Title="{ex:Language Key='Main parameter'}"
             ItemsSource="{Binding DataList}"
             SelectedIndex="0"
             Style="{StaticResource ComboBoxExtend}" />
@@ -65,13 +66,13 @@
             Grid.Column="1"
             Width="70"
             VerticalAlignment="Center"
-            hc:InfoElement.Title="Value"
+            hc:InfoElement.Title="{ex:Language Key='Value'}"
             Style="{StaticResource TextBoxExtend}" />
         <TextBox
             Grid.Row="5"
             Grid.ColumnSpan="2"
             VerticalAlignment="Stretch"
-            hc:InfoElement.Title="Remark"
+            hc:InfoElement.Title="{ex:Language Key='Remark'}"
             Style="{StaticResource TextBoxExtend}" />
         <StackPanel
             Grid.Row="6"
@@ -87,7 +88,7 @@
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 Background="{StaticResource ButtonBoderBrush}"
                 BorderBrush="{StaticResource ButtonBoderBrush}"
-                Content="OK"
+                Content="{ex:Language Key='OK'}"
                 FontSize="14"
                 Foreground="White" />
             <Button
@@ -98,7 +99,7 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 BorderBrush="{StaticResource ButtonBoderBrush}"
-                Content="Cancel"
+                Content="{ex:Language Key='Cancel'}"
                 FontSize="14"
                 Foreground="{StaticResource ButtonBoderBrush}" />
         </StackPanel>
