--- a/RD3/Views/AlarmView.xaml
+++ b/RD3/Views/AlarmView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ex="clr-namespace:LayUI.Wpf.Extensions;assembly=LayUI.Wpf.Extensions"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:local="clr-namespace:RD3.Views"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
@@ -27,7 +28,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="40" />
         </Grid.RowDefinitions>
-        <TextBlock FontSize="40" Text="Alarm Record" />
+        <TextBlock FontSize="40" Text="{ex:Language Key='Alarm Record'}" />
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
@@ -51,14 +52,14 @@
                 Width="200"
                 Height="30"
                 Margin="5,10,5,10"
-                hc:InfoElement.Placeholder="Start time"
+                hc:InfoElement.Placeholder="{ex:Language Key='Start time'}"
                 hc:InfoElement.ShowClearButton="True" />
             <hc:DateTimePicker
                 Grid.Column="2"
                 Width="200"
                 Height="30"
                 Margin="5,10,5,10"
-                hc:InfoElement.Placeholder="End time"
+                hc:InfoElement.Placeholder="{ex:Language Key='End time'}"
                 hc:InfoElement.ShowClearButton="True" />
             <Button
                 Grid.Column="3"
@@ -67,7 +68,7 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryFilter}"
-                Content="Filters"
+                Content="{ex:Language Key='Filters'}"
                 FontSize="14" />
         </Grid>
         <DataGrid
@@ -87,7 +88,7 @@
                 <DataGridTemplateColumn
                     Width="200"
                     CellStyle="{StaticResource DataGridTextLeftCellStyle}"
-                    Header="Alarm Time"
+                    Header="{ex:Language Key='Alarm Time'}"
                     HeaderStyle="{StaticResource DataGridLeftColumnHeaderStyle}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -99,31 +100,31 @@
                     Width="100"
                     Binding="{Binding Batch}"
                     CellStyle="{StaticResource DataGridTextCenterCellStyle}"
-                    Header="Batch"
+                    Header="{ex:Language Key='Batch'}"
                     HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
                 <DataGridTextColumn
                     Width="100"
                     Binding="{Binding Reactor}"
                     CellStyle="{StaticResource DataGridTextCenterCellStyle}"
-                    Header="Reactor"
+                    Header="{ex:Language Key='Reactor'}"
                     HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
                 <DataGridTextColumn
                     Width="100"
                     Binding="{Binding Value}"
                     CellStyle="{StaticResource DataGridTextCenterCellStyle}"
-                    Header="Value"
+                    Header="{ex:Language Key='Value'}"
                     HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
                 <DataGridTextColumn
                     Width="80"
                     Binding="{Binding Grade}"
                     CellStyle="{StaticResource DataGridTextCenterCellStyle}"
-                    Header="Grade"
+                    Header="{ex:Language Key='Grade'}"
                     HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
                 <DataGridTextColumn
                     Width="250"
                     Binding="{Binding Description}"
                     CellStyle="{StaticResource DataGridTextCenterCellStyle}"
-                    Header="Description"
+                    Header="{ex:Language Key='Description'}"
                     HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
             </DataGrid.Columns>
         </DataGrid>
