--- a/RD3/Views/BatchView.xaml
+++ b/RD3/Views/BatchView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ex="clr-namespace:LayUI.Wpf.Extensions;assembly=LayUI.Wpf.Extensions"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:RD3.Views"
@@ -25,7 +26,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="40" />
         </Grid.RowDefinitions>
-        <TextBlock FontSize="40" Text="Batch Manage" />
+        <TextBlock FontSize="40" Text="{ex:Language Key='Batch Manage'}" />
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
@@ -51,7 +52,7 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryFilter}"
-                Content="Filters"
+                Content="{ex:Language Key='Filters'}"
                 FontSize="14" />
             <Button
                 Grid.Column="3"
@@ -60,7 +61,7 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryCompare}"
-                Content="Compare"
+                Content="{ex:Language Key='Compare'}"
                 FontSize="14" />
             <Button
                 Grid.Column="4"
@@ -69,7 +70,7 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryExport}"
-                Content="Export"
+                Content="{ex:Language Key='Export'}"
                 FontSize="14" />
             <Button
                 Grid.Column="5"
@@ -92,27 +93,63 @@
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
             ScrollViewer.VerticalScrollBarVisibility="Auto">
             <DataGrid.Columns>
-                <DataGridTextColumn Width="50" Header="ID" />
-                <DataGridTextColumn Width="100" Header="Name" />
-                <DataGridTextColumn Width="200" Header="Reactor" />
-                <DataGridTextColumn Width="150" Header="Status" />
-                <DataGridTemplateColumn Width="200" Header="Start time">
+                <DataGridTextColumn
+                    Width="50"
+                    CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                    Header="{ex:Language Key='ID'}"
+                    HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
+                <DataGridTextColumn
+                    Width="100"
+                    CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                    Header="{ex:Language Key='Name'}"
+                    HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
+                <DataGridTextColumn
+                    Width="200"
+                    CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                    Header="{ex:Language Key='Reactor'}"
+                    HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
+                <DataGridTextColumn
+                    Width="150"
+                    CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                    Header="{ex:Language Key='Status'}"
+                    HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
+                <DataGridTemplateColumn
+                    Width="200"
+                    CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                    Header="{ex:Language Key='Start time'}"
+                    HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Date, StringFormat={}{0:yyyy-MM-dd HH:mm:ss}}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn Width="200" Header="End time">
+                <DataGridTemplateColumn
+                    Width="200"
+                    CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                    Header="{ex:Language Key='End time'}"
+                    HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Date, StringFormat={}{0:yyyy-MM-dd HH:mm:ss}}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Width="100" Header="Project" />
-                <DataGridTextColumn Width="120" Header="Description" />
-                <DataGridTemplateColumn Width="200" Header="Operation">
+                <DataGridTextColumn
+                    Width="100"
+                    CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                    Header="{ex:Language Key='Project'}"
+                    HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
+                <DataGridTextColumn
+                    Width="120"
+                    CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                    Header="{ex:Language Key='Description'}"
+                    HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
+                <DataGridTemplateColumn
+                    Width="200"
+                    CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                    Header="{ex:Language Key='Operation'}"
+                    HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel>
