--- a/RD3/Views/EditClientView.xaml
+++ b/RD3/Views/EditClientView.xaml
@@ -3,12 +3,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ex="clr-namespace:LayUI.Wpf.Extensions;assembly=LayUI.Wpf.Extensions"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:local="clr-namespace:RD3.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="clr-namespace:RD3.ViewModels"
     Width="250"
-    Height="400"
+    Height="350"
     d:DataContext="{d:DesignInstance Type=viewmodels:EditClientViewModel}"
     Background="{StaticResource BackGroundBrush}"
     mc:Ignorable="d">
@@ -25,35 +26,35 @@
         <TextBox
             Width="200"
             VerticalAlignment="Center"
-            hc:InfoElement.Title="Name"
+            hc:InfoElement.Title="{ex:Language Key='Name'}"
             Style="{StaticResource TextBoxExtend}"
             Text="{Binding Client.Name}" />
         <TextBox
             Grid.Row="1"
             Width="200"
             VerticalAlignment="Center"
-            hc:InfoElement.Title="Host"
+            hc:InfoElement.Title="{ex:Language Key='Host'}"
             Style="{StaticResource TextBoxExtend}"
             Text="{Binding Client.Host}" />
         <TextBox
             Grid.Row="2"
             Width="200"
             VerticalAlignment="Center"
-            hc:InfoElement.Title="Port"
+            hc:InfoElement.Title="{ex:Language Key='Port'}"
             Style="{StaticResource TextBoxExtend}"
             Text="{Binding Client.Port}" />
         <TextBox
             Grid.Row="3"
             Width="200"
             VerticalAlignment="Center"
-            hc:InfoElement.Title="ReconnectDelay"
+            hc:InfoElement.Title="{ex:Language Key='ReconnectDelay'}"
             Style="{StaticResource TextBoxExtend}"
             Text="{Binding Client.ReconnectDelay}" />
         <TextBox
             Grid.Row="4"
             Width="200"
             VerticalAlignment="Center"
-            hc:InfoElement.Title="RetryTimes"
+            hc:InfoElement.Title="{ex:Language Key='RetryTimes'}"
             Style="{StaticResource TextBoxExtend}"
             Text="{Binding Client.RetryTimes}" />
         <StackPanel
@@ -70,7 +71,7 @@
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 BorderBrush="{StaticResource ButtonBoderBrush}"
                 Command="{Binding CancelCommand}"
-                Content="Cancel"
+                Content="{ex:Language Key='Cancel'}"
                 FontSize="14"
                 Foreground="{StaticResource ButtonBoderBrush}" />
             <Button
@@ -83,7 +84,7 @@
                 Background="{StaticResource ButtonBoderBrush}"
                 BorderBrush="{StaticResource ButtonBoderBrush}"
                 Command="{Binding OKCommand}"
-                Content="OK"
+                Content="{ex:Language Key='OK'}"
                 FontSize="14"
                 Foreground="White" />
         </StackPanel>
