--- a/RD3/Views/EditUserView.xaml
+++ b/RD3/Views/EditUserView.xaml
@@ -1,15 +1,33 @@
 ﻿<UserControl
-    x:Class="RD3.Views.AddUser"
+    x:Class="RD3.Views.EditUserView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ex="clr-namespace:LayUI.Wpf.Extensions;assembly=LayUI.Wpf.Extensions"
     xmlns:hc="https://handyorg.github.io/handycontrol"
-    xmlns:local="clr-namespace:RD3.Views"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:local="clr-namespace:RD3.Shared;assembly=RD3.Shared"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:pass="clr-namespace:RD3.Extensions"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    xmlns:viewmodels="clr-namespace:RD3.ViewModels"
     Width="220"
     Height="250"
+    d:DataContext="{d:DesignInstance Type=viewmodels:EditUserViewModel}"
     Background="#FDFDFD"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <ObjectDataProvider
+            x:Key="DataFromEnum"
+            MethodName="GetValues"
+            ObjectType="{x:Type sys:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="local:UserType" />
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+    </UserControl.Resources>
+
     <Border
         BorderBrush="{StaticResource PrimaryBorderBrush}"
         CornerRadius="8"
@@ -26,28 +44,35 @@
             <TextBox
                 Width="200"
                 VerticalAlignment="Center"
-                hc:InfoElement.Title="UserName"
+                hc:InfoElement.Title="{ex:Language Key='UserName'}"
                 Style="{StaticResource TextBoxExtend}"
-                Text="{Binding UserName}" />
-            <TextBox
+                Text="{Binding User.UserName}" />
+            <hc:PasswordBox
+                Name="passWord"
                 Grid.Row="1"
                 Width="200"
                 VerticalAlignment="Center"
-                hc:InfoElement.Title="Password"
-                Style="{StaticResource TextBoxExtend}"
-                Text="{Binding Password}" />
-            <TextBox
+                hc:BorderElement.CornerRadius="8"
+                hc:InfoElement.Title="{ex:Language Key='Password'}"
+                Password="123456"
+                ShowEyeButton="True" />
+            <hc:PasswordBox
+                Name="confirmPwd"
                 Grid.Row="2"
                 Width="200"
                 VerticalAlignment="Center"
-                hc:InfoElement.Title="Confirm Password"
-                Style="{StaticResource TextBoxExtend}"
-                Text="{Binding Password}" />
-            <CheckBox
+                hc:BorderElement.CornerRadius="8"
+                hc:InfoElement.Title="{ex:Language Key='Confirm Password'}"
+                Password="123456"
+                ShowEyeButton="True" />
+            <hc:ComboBox
                 Grid.Row="3"
-                Margin="10"
-                Content="Display password"
-                IsChecked="True" />
+                Width="200"
+                VerticalAlignment="Center"
+                hc:BorderElement.CornerRadius="8"
+                hc:InfoElement.Title="{ex:Language Key='User Type'}"
+                ItemsSource="{Binding Source={StaticResource DataFromEnum}}"
+                SelectedItem="{Binding User.Type}" />
             <StackPanel
                 Grid.Row="5"
                 Grid.ColumnSpan="2"
@@ -60,11 +85,11 @@
                     HorizontalAlignment="Right"
                     HorizontalContentAlignment="Center"
                     hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
-                    Background="{StaticResource ButtonBoderBrush}"
                     BorderBrush="{StaticResource ButtonBoderBrush}"
-                    Content="OK"
+                    Command="{Binding CancelCommand}"
+                    Content="{ex:Language Key='Cancel'}"
                     FontSize="14"
-                    Foreground="White" />
+                    Foreground="{StaticResource ButtonBoderBrush}" />
                 <Button
                     Width="80"
                     Height="30"
@@ -72,12 +97,13 @@
                     HorizontalAlignment="Right"
                     HorizontalContentAlignment="Center"
                     hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
+                    Background="{StaticResource ButtonBoderBrush}"
                     BorderBrush="{StaticResource ButtonBoderBrush}"
-                    Content="Cancel"
+                    Click="Button_Click"
+                    Content="{ex:Language Key='OK'}"
                     FontSize="14"
-                    Foreground="{StaticResource ButtonBoderBrush}" />
+                    Foreground="White" />
             </StackPanel>
         </Grid>
     </Border>
-
 </UserControl>
