--- a/RD3/Views/MainView.xaml
+++ b/RD3/Views/MainView.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Selector="clr-namespace:RD3"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ex="clr-namespace:LayUI.Wpf.Extensions;assembly=LayUI.Wpf.Extensions"
     xmlns:ext="clr-namespace:RD3.Extensions"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
@@ -84,7 +85,7 @@
                                 CommandParameter="{Binding Header, RelativeSource={RelativeSource Self}}"
                                 FontSize="16"
                                 FontStretch="Condensed"
-                                Header="Home">
+                                Header="{ex:Language Key='Home'}">
                                 <hc:SideMenuItem.Icon>
                                     <Image
                                         Width="24"
@@ -99,7 +100,7 @@
                                 Command="{Binding SelectCmd}"
                                 CommandParameter="{Binding Header, RelativeSource={RelativeSource Self}}"
                                 FontSize="16"
-                                Header="Projects">
+                                Header="{ex:Language Key='Project'}">
                                 <hc:SideMenuItem.Icon>
                                     <Image
                                         Width="24"
@@ -114,7 +115,7 @@
                                 Command="{Binding SelectCmd}"
                                 CommandParameter="{Binding Header, RelativeSource={RelativeSource Self}}"
                                 FontSize="16"
-                                Header="Data">
+                                Header="{ex:Language Key='Data'}">
                                 <hc:SideMenuItem.Icon>
                                     <Image
                                         Width="24"
@@ -129,7 +130,7 @@
                                 Command="{Binding SelectCmd}"
                                 CommandParameter="{Binding Header, RelativeSource={RelativeSource Self}}"
                                 FontSize="16"
-                                Header="Calibrate">
+                                Header="{ex:Language Key='Calibrate'}">
                                 <hc:SideMenuItem.Icon>
                                     <Image
                                         Width="24"
@@ -144,7 +145,7 @@
                                 Command="{Binding SelectCmd}"
                                 CommandParameter="{Binding Header, RelativeSource={RelativeSource Self}}"
                                 FontSize="16"
-                                Header="Control">
+                                Header="{ex:Language Key='Control'}">
                                 <hc:SideMenuItem.Icon>
                                     <Image
                                         Width="24"
@@ -159,7 +160,7 @@
                                 Command="{Binding SelectCmd}"
                                 CommandParameter="{Binding Header, RelativeSource={RelativeSource Self}}"
                                 FontSize="16"
-                                Header="Settings">
+                                Header="{ex:Language Key='Settings'}">
                                 <hc:SideMenuItem.Icon>
                                     <Image
                                         Width="24"
@@ -193,7 +194,6 @@
                             <Button
                                 Name="btnChooseLanguage"
                                 Grid.Column="1"
-                                Width="60"
                                 Height="40"
                                 Margin="0,0,50,0"
                                 HorizontalAlignment="Stretch"
@@ -288,7 +288,8 @@
                             </Popup>
                             <TextBlock
                                 Grid.Column="3"
-                                Margin="0,0,70,0"
+                                Margin="-5,0,70,0"
+                                HorizontalAlignment="Left"
                                 VerticalAlignment="Center"
                                 FontSize="16"
                                 Text="{Binding UserName}" />
