--- a/RD3/Views/SampleView.xaml
+++ b/RD3/Views/SampleView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ex="clr-namespace:LayUI.Wpf.Extensions;assembly=LayUI.Wpf.Extensions"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:RD3.Views"
@@ -25,7 +26,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="40" />
         </Grid.RowDefinitions>
-        <TextBlock FontSize="40" Text="Sample Manage" />
+        <TextBlock FontSize="40" Text="{ex:Language Key='Sample Manage'}" />
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
@@ -52,7 +53,7 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryFilter}"
-                Content="Filters"
+                Content="{ex:Language Key='Filters'}"
                 FontSize="14" />
             <Button
                 Grid.Column="3"
@@ -63,7 +64,7 @@
                 hc:IconElement.Geometry="{StaticResource GeometryAddLog}"
                 Background="{StaticResource ButtonBoderBrush}"
                 BorderBrush="{StaticResource ButtonBoderBrush}"
-                Content="Log"
+                Content="{ex:Language Key='Log'}"
                 FontSize="14"
                 Foreground="White" />
             <Button
@@ -73,7 +74,7 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryCompare}"
-                Content="Compare"
+                Content="{ex:Language Key='Compare'}"
                 FontSize="14" />
             <Button
                 Grid.Column="5"
@@ -82,7 +83,7 @@
                 HorizontalContentAlignment="Center"
                 hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                 hc:IconElement.Geometry="{StaticResource GeometryExport}"
-                Content="Export"
+                Content="{ex:Language Key='Export'}"
                 FontSize="14" />
             <Button
                 Grid.Column="6"
@@ -105,21 +106,21 @@
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
             ScrollViewer.VerticalScrollBarVisibility="Auto">
             <DataGrid.Columns>
-                <DataGridTextColumn Width="50" Header="ID" />
-                <DataGridTextColumn Width="100" Header="Batch" />
-                <DataGridTextColumn Width="200" Header="Reactor" />
-                <DataGridTextColumn Width="100" Header="Type" />
-                <DataGridTemplateColumn Width="200" Header="Sampling time">
+                <DataGridTextColumn Width="50" Header="{ex:Language Key='ID'}" />
+                <DataGridTextColumn Width="100" Header="{ex:Language Key='Batch'}" />
+                <DataGridTextColumn Width="200" Header="{ex:Language Key='Reactor'}" />
+                <DataGridTextColumn Width="100" Header="{ex:Language Key='Type'}" />
+                <DataGridTemplateColumn Width="200" Header="{ex:Language Key='Sampling time'}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Date, StringFormat={}{0:yyyy-MM-dd HH:mm:ss}}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Width="150" Header="Main parameter" />
-                <DataGridTextColumn Width="120" Header="Value" />
-                <DataGridTextColumn Width="120" Header="Remark" />
-                <DataGridTemplateColumn Width="200" Header="Operation">
+                <DataGridTextColumn Width="150" Header="{ex:Language Key='Main parameter'}" />
+                <DataGridTextColumn Width="120" Header="{ex:Language Key='Value'}" />
+                <DataGridTextColumn Width="120" Header="{ex:Language Key='Remark'}" />
+                <DataGridTemplateColumn Width="200" Header="{ex:Language Key='Operation'}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel>
