--- a/RD3/Views/UserView.xaml
+++ b/RD3/Views/UserView.xaml
@@ -3,7 +3,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ex="clr-namespace:LayUI.Wpf.Extensions;assembly=LayUI.Wpf.Extensions"
     xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:RD3.Views"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -28,7 +30,7 @@
             <Setter Property="WindowStyle" Value="None" />
             <Setter Property="WindowState" Value="{Binding FormState, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <Setter Property="Background" Value="#F8F9F9" />
-            <Setter Property="Opacity" Value="0.5" />
+            <Setter Property="Opacity" Value="1" />
         </Style>
     </prism:Dialog.WindowStyle>
     <Border
@@ -40,7 +42,6 @@
                 <RowDefinition Height="40" />
                 <RowDefinition Height="60" />
                 <RowDefinition Height="*" />
-
             </Grid.RowDefinitions>
             <Button
                 Name="btnClose"
@@ -69,9 +70,8 @@
                     Grid.Column="1"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    hc:IconElement.Geometry="{StaticResource AddGeometry}"
                     FontSize="40"
-                    Text="Account Manage" />
+                    Text="{ex:Language Key='Account Manage'}" />
                 <Border
                     Grid.Column="3"
                     Width="55"
@@ -99,11 +99,15 @@
                         Height="30"
                         Margin="5"
                         HorizontalAlignment="Left"
-                        hc:InfoElement.Placeholder="Searach"
+                        hc:InfoElement.Placeholder="{ex:Language Key='Searach'}"
                         hc:InfoElement.ShowClearButton="True"
-                        Command="{Binding SearchCmd}"
-                        CommandParameter="{Binding Text, RelativeSource={RelativeSource Self}}"
-                        IsRealTime="True" />
+                        IsRealTime="True">
+                        <hc:Interaction.Triggers>
+                            <hc:EventTrigger EventName="SearchStarted">
+                                <hc:EventToCommand Command="{Binding SearchCommand}" PassEventArgsToCommand="True" />
+                            </hc:EventTrigger>
+                        </hc:Interaction.Triggers>
+                    </hc:SearchBar>
                     <Button
                         Grid.Column="1"
                         Height="30"
@@ -114,55 +118,108 @@
                         hc:IconElement.Geometry="{StaticResource AddGeometry}"
                         Background="{StaticResource ButtonBoderBrush}"
                         BorderBrush="{StaticResource ButtonBoderBrush}"
-                        Command="{Binding ExcuteCommand}"
-                        CommandParameter="Add"
-                        Content="Add"
+                        Command="{Binding AddUserCommand}"
+                        Content="{ex:Language Key='Add'}"
                         Foreground="WhiteSmoke" />
                     <ComboBox
                         Grid.Column="3"
                         Width="150"
                         Height="30"
                         Margin="5"
-                        hc:InfoElement.Placeholder="Select" />
+                        hc:InfoElement.Placeholder="{ex:Language Key='Select'}" />
                 </Grid>
                 <DataGrid
+                    Name="dataGrid"
                     Grid.Row="1"
+                    hc:DataGridAttach.CanUnselectAllWithBlankArea="True"
+                    hc:DataGridAttach.ShowSelectAllButton="False"
                     AutoGenerateColumns="False"
                     Background="Transparent"
                     FontSize="14"
                     HeadersVisibility="All"
-                    ItemsSource="{Binding Users}"
-                    RowHeaderWidth="50"
+                    IsReadOnly="True"
+                    ItemsSource="{Binding UserCol}"
+                    RowHeaderWidth="60"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseDoubleClick">
+                            <i:InvokeCommandAction Command="{Binding EditCommand}" CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                     <DataGrid.Columns>
                         <DataGridTextColumn
                             Width="150"
-                            Binding="{Binding Username}"
-                            Header="Username" />
-                        <DataGridTemplateColumn Width="200" Header="Creat time">
+                            Binding="{Binding UserName}"
+                            CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                            Header="{ex:Language Key='Username'}"
+                            HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}"
+                            IsReadOnly="True" />
+                        <DataGridTemplateColumn
+                            Width="200"
+                            CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                            Header="{ex:Language Key='Creat time'}"
+                            HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding Date, StringFormat={}{0:yyyy-MM-dd HH:mm:ss}}" />
+                                    <TextBlock Text="{Binding Createtime, StringFormat={}{0:yyyy-MM-dd HH:mm:ss}}" />
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
-                        <DataGridTextColumn Width="120" Header="Creator" />
-                        <DataGridTextColumn Width="120" Header="Type" />
+                        <DataGridTextColumn
+                            Width="120"
+                            Binding="{Binding Creator}"
+                            CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                            Header="{ex:Language Key='Creator'}"
+                            HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
+                        <DataGridTextColumn
+                            Width="120"
+                            Binding="{Binding Type}"
+                            CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                            Header="{ex:Language Key='Type'}"
+                            HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
+                        <DataGridTemplateColumn
+                            Width="200"
+                            CellStyle="{StaticResource DataGridTextCenterCellStyle}"
+                            Header="{ex:Language Key='Operation'}"
+                            HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Button
+                                            Margin="5"
+                                            HorizontalContentAlignment="Center"
+                                            hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
+                                            hc:IconElement.Geometry="{StaticResource GeometryEdit}"
+                                            Background="Transparent"
+                                            BorderThickness="0"
+                                            Click="ButtonEdit_Click" />
+                                        <Button
+                                            Margin="5"
+                                            HorizontalContentAlignment="Center"
+                                            hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
+                                            hc:IconElement.Geometry="{StaticResource GeometryDelete}"
+                                            Background="Transparent"
+                                            BorderThickness="0"
+                                            Click="ButtonDelete_Click" />
+                                    </StackPanel>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
                     </DataGrid.Columns>
-                    <DataGrid.ContextMenu>
+                    <!--<DataGrid.ContextMenu>
                         <ContextMenu>
-                            <MenuItem Command="{Binding EditCmd}" Header="Edit" />
-                            <MenuItem Command="{Binding DeleteCmd}" Header="Delete" />
+                            <MenuItem Command="{Binding EditCommand}" Header="{ex:Language Key='Edit Type'}" />
+                            <MenuItem Command="{Binding DeleteCommand}" Header="{ex:Language Key='Delete'}" />
                         </ContextMenu>
-                    </DataGrid.ContextMenu>
+                    </DataGrid.ContextMenu>-->
                 </DataGrid>
                 <hc:Pagination
                     Grid.Row="3"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Center"
+                    Background="Transparent"
+                    DataCountPerPage="10"
                     IsJumpEnabled="True"
-                    MaxPageCount="10"
+                    MaxPageCount="{Binding PageCount}"
                     MaxPageInterval="4"
                     PageIndex="1" />
             </Grid>
